# fetch-code-challenge-2025

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  test_curl.sh
src/models/: item.py  receipt.py
tests/: app_test.py  item_test.py  receipt_test.py
tests/models/: item_test.py  receipt_test.py
