[project]
name = "fetch-code-challenge-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "typing>=3.10.0.0",
    "uuid-utils>=0.10.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "wat>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
